trying to get functionality.... functioning

--- a/Group3Project/ClientApp/src/app/home/home.component.html
+++ b/Group3Project/ClientApp/src/app/home/home.component.html
@@ -1,15 +1,14 @@
-<app-tod-changer (created)="getTOD($event)"
-></app-tod-changer>
+<app-tod-changer (created)="getTOD($event)"></app-tod-changer>
 <div *ngFor="let result of demand.response.data">
-  <p>DEMAND = {{result.value}} MWh</p>
+  <p>DEMAND = {{ result.value }} MWh</p>
 </div>
 <div>
-  <p>Actual Capacity = {{Atotal}}</p>
-  <p>Best Possible Capacity = {{Ntotal}}</p>
-  <p>Capacity Multiplier = {{Atotal/Ntotal}}</p>
+  <p>Actual Capacity = {{ Atotal }}</p>
+  <p>Best Possible Capacity = {{ Ntotal }}</p>
+  <p>Capacity Multiplier = {{ Atotal / Ntotal }}</p>
 </div>
 
 <div *ngFor="let plant of allPlants">
-  <p>Nameplate: {{plant.nameplateCapacity}}</p>
-  <p>Actual Output:{{getNetOutput(plant.Id)}} </p>
+  <p>Nameplate: {{ plant.nameplateCapacity }}</p>
+  <p>Actual Output:{{ getNetOutput(plant.fuelId) }}</p>
 </div>
