adjusted CheckPower() and began CSS work for ngClass

--- a/Group3Project/ClientApp/src/app/home/home.component.html
+++ b/Group3Project/ClientApp/src/app/home/home.component.html
@@ -1,16 +1,24 @@
 <app-tod-changer (created)="getTOD($event)"></app-tod-changer>
 <button (click)="getRatio2()">Get plants</button>
-
 <div *ngIf="loaded">
-  <div *ngFor="let plant of allPlants">
+  <div
+    id="plant"
+    *ngFor="let plant of allPlants"
+    [ngClass]="{ Running: plant.powState, Off: !plant.powState }"
+  >
+    <img src="../../assets/LEAF.png" />
     <p>Nameplate: {{ plant.nameplateCapacity }}</p>
     <p>Plant ID {{ plant.id }}</p>
     <p>fuel ID: {{ plant.fuelId }}</p>
-   <!--  <p>{{plant.powState}}</p>-->
+    <!--  <p>{{plant.powState}}</p>-->
     <p *ngIf="plant.powState">Power Status: On</p>
-    <button *ngIf="!plant.powState" (click)="togglePower(plant.id)">Power On</button>
-    <button *ngIf="plant.powState" (click)="togglePower(plant.id)">Power Off</button>
-
+    <button *ngIf="!plant.powState" (click)="togglePower(plant.id)">
+      Power On
+    </button>
+    <button *ngIf="plant.powState" (click)="togglePower(plant.id)">
+      Power Off
+    </button>
+    <p>{{ checkPower(plant.id) }}</p>
     <!-- <p>Actual Output:{{ getNetOutput(plant.fuelId) }}</p> -->
   </div>
 </div>
