--- a/Group3Project/ClientApp/src/app/tod-changer/tod-changer.component.html
+++ b/Group3Project/ClientApp/src/app/tod-changer/tod-changer.component.html
@@ -1,16 +1,18 @@
 <form #TODForm="ngForm" (ngSubmit)="UpdateTOD(TODForm)">
-    <!-- <input type="number" name="fuelId" placeholder="ID number of Fuel" (input)="changeLimit($event)" ngModel/> -->
-    <select name="TOD" ngModel > 
-        <option *ngFor="let time of times"  [ngValue]="time.utc"  >{{time.id}}</option>
-    </select>
+  <!-- <input type="number" name="fuelId" placeholder="ID number of Fuel" (input)="changeLimit($event)" ngModel/> -->
+  <select name="TOD" ngModel required>
+    <option *ngFor="let time of times" [ngValue]="time.utc">
+      {{ time.id }}
+    </option>
+  </select>
 
-    <select name="Season" ngModel> 
-        <option *ngFor="let s of seasons" [ngValue]="s.month" >{{s.id}}</option>
-    </select>
+  <select name="Season" ngModel required>
+    <option *ngFor="let s of seasons" [ngValue]="s.month">{{ s.id }}</option>
+  </select>
 
-    <select name="Region" ngModel> 
-        <option *ngFor="let r of regions"  [ngValue]="r">{{r}}</option>
-    </select>
+  <select name="Region" ngModel required>
+    <option *ngFor="let r of regions" [ngValue]="r">{{ r }}</option>
+  </select>
 
-    <button>Submit</button>
+  <button>Submit</button>
 </form>
