Blah - trying to play around with this filter stuff(CSS)

--- a/Group3Project/ClientApp/src/app/home/home.component.html
+++ b/Group3Project/ClientApp/src/app/home/home.component.html
@@ -22,3 +22,5 @@
     <!-- <p>Actual Output:{{ getNetOutput(plant.fuelId) }}</p> -->
   </div>
 </div>
+<br />
+<img class="tester" src="../../assets/LEAF.png" />
