--- a/Group3Project/ClientApp/src/app/home/home.component.css
+++ b/Group3Project/ClientApp/src/app/home/home.component.css
@@ -10,6 +10,13 @@
     width: 50px;
     height: 50px;
 }
+.tester{
+    filter: invert(48%) sepia(13%) saturate(1000%) hue-rotate(18deg) brightness(95%) contrast(60%);
+    /* filter: hue-rotate(130deg) sepia(13%) saturate(3207%)invert(48%); */
+
+    width: 100px;
+    height: 100px;
+}
 
 .Off {
     color: #e65245;
