--- a/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
+++ b/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
@@ -1,8 +1,20 @@
 <app-tod-changer (created)="getTOD($event)"></app-tod-changer>
 <div>
   <button (click)="getDemand()">Update Demand</button>
-  <p>{{demand.response.data[0].value}}</p>
+  <p>{{ demand.response.data[0].value * 0.01 }}</p>
+
+  <button (click)="calculateTotal()">Calculate Current Output</button>
+  <p *ngIf="total != 0">{{ total }}</p>
+
+  <p *ngIf="demand.response.data[0].value * 0.01 < total">
+    You have saved the city, congratulations!
+  </p>
+  <p *ngIf="demand.response.data[0].value * 0.01 >= total">
+    Millions are without power, fabulous.
+  </p>
 </div>
+
+<!-- listing all our lil plants/outputs -->
 <button (click)="getRatio2()">Get plants</button>
 <div *ngIf="loaded">
   <div
