--- a/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
+++ b/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
@@ -11,7 +11,14 @@
   >
     <div class="row">
       <div class="col-md-6 col-12">
-        <div class="card">
+        <span>
+          <button (click)="toggleTODMenu()">Show Menu</button>
+          <button (click)="toggleAddPlant()">Add Plant</button>
+        </span>
+        <div *ngIf="showAddPlant">
+          <app-create-aplant></app-create-aplant>
+        </div>
+        <div class="card" *ngIf="showTODMenu">
           <app-tod-changer (created)="getTOD($event)"></app-tod-changer>
           <button (click)="getDemand()">0) and 2) Update Demand</button>
           <button (click)="getRatio2()">3) Get plants</button>
@@ -19,8 +26,16 @@
             4) Calculate Current Output
           </button>
         </div>
-        <div class="offset-md-8 col-md-6 col-12">
-          <div class="card">
+      </div>
+      <div class="row">
+        <div class="offset-md-3 col-md-6 col-12">
+          <div
+            class="card"
+            style="
+              box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+              text-align: center;
+            "
+          >
             <p>
               Producing {{ total }}MW of Required
               {{ demand.response.data[0].value * 0.1 }} MW
