--- a/Group3Project/ClientApp/src/styles.css
+++ b/Group3Project/ClientApp/src/styles.css
@@ -24,3 +24,5 @@ button{
 *{
   font-family: 'Quicksand', sans-serif;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
