--- a/Group3Project/ClientApp/src/styles.css
+++ b/Group3Project/ClientApp/src/styles.css
@@ -25,4 +25,10 @@ button{
   font-family: 'Quicksand', sans-serif;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+  background: url("https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvYTAwNS1zY290dHctNDI5LmpwZw.jpg?s=NymA01RbkRN-kZMwUFIR9Tdb9hW3pnF0d6n3XODL7F0") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
