--- a/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
+++ b/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
@@ -1,4 +1,5 @@
-<div id="border">
+<h1 *ngIf="!loggedIn">Please log in to play!</h1>
+<div id="border" *ngIf="loggedIn">
   <div
     id="sky"
     class="container sticky-top"
