fixed progress bar on initial load, styling nerds page

--- a/Group3Project/ClientApp/src/app/facts-for-nerds/facts-for-nerds.component.html
+++ b/Group3Project/ClientApp/src/app/facts-for-nerds/facts-for-nerds.component.html
@@ -1,4 +1,6 @@
 <app-nav-menu></app-nav-menu>
+<div class="container"> 
+<div class="row"> 
 <div>
   <h1>Facts for Nerds: A Q&A</h1>
 </div>
@@ -16,13 +18,15 @@
     represent the four seasons and four distinct times of day. The steps for
     processing this data are shown in the flowchart below (reads right to left).
   </p>
+<div class="row"> 
+<div class="col">
   <iframe
     style="border: 1px solid rgba(0, 0, 0, 0.1)"
-    width="1000"
-    height="750"
     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FkyodSV7VAjfHJsilN8GFVy%2FAPI-Logic%3Fnode-id%3D0%253A1"
     allowfullscreen
   ></iframe>
+</div>
+</div>
   <p>
     Future work could include avereaging our calulated capacities over a few
     hours in a day or a few days in a month so that the spikes in energy due to
@@ -74,4 +78,6 @@
     large photovoltaic power plants is about 8. Using that figure, dimensional
     analysis gives us a 18.75 square mile area for a 1500 MW solar plant.
   </p>
+</div>
+</div>
 </div>
